Added borders and spacing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <header id="main-h" class="container text-center">            
+    <header id="main-h" class="container text-center border border-5">            
         <div class="row h-100 align-items-center">
             <div class="col">
                 <h1>Vacation Destinations WishList</h1>
@@ -20,9 +20,9 @@
         </div>          
     </header>
 
-    <main class="container">
-        <div class="row">
-            <article class="col">
+    <main class="container my-5">
+        <div class="row justify-content-around">
+            <article class="col-5 border border-5 py-5">
                 <form class="m-auto">
                     <div class="mb-2">
                         <label for="destination" class="form-label">Destination name</label>
@@ -43,7 +43,7 @@
                     <button type="submit" class="btn btn-primary">Add to list</button>
                 </form>
             </article>
-            <section class="col text-center">
+            <section class="col-5 text-center border border-5 py-5">
                 <h3>Enter destination details</h3>
                 <div class="details"></div>
             </section>
